stats: refactor flask to fastapi
now we get free validation and auto-gen api schemas :thumbsup:

trust me this change is an effective net positive on society!
